<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">知音天气</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="china">中国</string>
	<string name="dialog_title">颜色选择</string>
	<string name="chooseCity">城市选择</string>
	<string name="nowCity">定位城市</string>
	<string name="wuhan">武汉</string>
	<string name="donow">定位中</string>
	<string name="Settings">设置</string>
	<string name="choose">城市</string>
	<string name="addCity">加入</string>
	<string name="enter">确定</string>
	<string name="cancel">取消</string>
	<string name="mainCity">主城市</string>
	<string name="sousuo">输入城市</string>
	<string name="change1">本周预测</string>
	<string name="change2">今日概况</string>
	<string name="pleaseMain">将此城市设为主城市</string>
	<string name="pleaseAdd">将此城市添加到列表</string>
	<string name="pleaseDeltel">删除此城市</string>
	<string name="today">今日</string>
	<string name="day">日</string>
	<string name="fengli0">微风 </string>
	<string name="fengli1">3-4 级</string>
	<string name="fengli2">4-5 级</string>
	<string name="fengli3">5-6 级</string>
	<string name="fengli4">6-7 级</string>
	<string name="fengli5">7-8 级</string>
	<string name="fengli6">8-9 级</string>
	<string name="fengli7">9-10 级 </string>
	<string name="fengli8">10-11 级 </string>
	<string name="fengli9">11-12 级</string>
	<string name="fengxiang0">无持续风向</string>
	<string name="fengxiang1">东北风</string>
	<string name="fengxiang2">东风 </string>
	<string name="fengxiang3">东南风</string>
	<string name="fengxiang4">南风</string>
	<string name="fengxiang5">西南风</string>
	<string name="fengxiang6">西风</string>
	<string name="fengxiang7">西北风</string>
	<string name="fengxiang8">北风</string>
	<string name="fengxiang9">旋转风</string>
	<string name="weather0">晴 </string>
	<string name="weather1">多云</string>
	<string name="weather2">阴</string>
	<string name="weather3">阵雨</string>
	<string name="weather4">雷阵雨</string>
	<string name="weather5">雷雨伴有冰雹 </string>
	<string name="weather6">雨夹雪 </string>
	<string name="weather7">小雨 </string>
	<string name="weather8">中雨 </string>
	<string name="weather9">大雨 </string>
	<string name="weather10">暴雨</string>
	<string name="weather11">大暴雨</string>
	<string name="weather12">特大暴雨</string>
	<string name="weather13">阵雪 </string>
	<string name="weather14">小雪 </string>
	<string name="weather15">中雪</string>
	<string name="weather16">大雪</string>
	<string name="weather17">暴雪</string>
	<string name="weather18">雾</string>
	<string name="weather19">冻雨</string>
	<string name="weather20">沙尘暴 </string>
	<string name="weather21">小到中雨</string>
	<string name="weather22">中到大雨</string>
	<string name="weather23">大到暴雨</string>
	<string name="weather24">大暴雨 </string>
	<string name="weather25">特大暴雨</string>
	<string name="weather26">小到中雪 </string>
	<string name="weather27">中到大雪 </string>
	<string name="weather28">大到暴雪</string>
	<string name="weather29">浮尘</string>
	<string name="weather30">扬沙</string>
	<string name="weather31">强沙尘暴</string>
	<string name="weather53">霾 </string>
	<string name="weather99">无</string>
	<string name="blank"></string>
	<string name="initTmp">下拉获取数据</string>
	<string name="about">版本号：1.2\n\n软件为个人开发，有所不足，有什么意见或建议请发送邮件至1179636441@qq.com
	    </string>
</resources>
