<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_orange_dark" >

    <EditText 
        android:id="@+id/fragment_choosecity_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/sousuo"
        />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/nowCity"
            android:textSize="22sp" />

		<Button
		    android:id="@+id/fragment_choosecity_button"
		    android:textSize="20sp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_centerVertical="true"
		    android:background="@drawable/touming"
		    android:text="@string/donow"
		     />

    </RelativeLayout>

    <ListView 
        android:id="@+id/framgent_choosecity_List"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
    </ListView>

</LinearLayout>
